LOK-1925: fix tests